<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RestaurantApp</string>
    <string name="hello_world">Hello world</string>
    <string name="title">Restaurant App</string>
    <string name="action_settings">Settings</string>
    <string name="settings_button">Settings</string>
    <string name="randomize_button">Randomizer</string>
    <string name="rand_text_randPage">Shake to Randomize</string>

    <string-array name="categories">
        <item>Any</item>
        <item>Vietnamese</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Cantonese</item>
        <item>Steakhouse</item>
        <item>Thai</item>
        <item>Indian</item>
        <item>Burger</item>
        <item>Fast-Food</item>
        <item>Japanese</item>
    </string-array>

    <string name="title_activity_maps">Map of Restaurants</string>
    <string name="marker_title1">Title:</string>
    <string name="marker_title2">Title(Unique)</string>
    <string name="marker_rating1">Rating:</string>
    <string name="marker_rating2">0..5</string>
    <string name="marker_comment1">Comment:</string>
    <string name="marker_comment2">Your comment here.</string>
    <string name="marker_category">Italian</string>
    <string name="marker_button">Save</string>

</resources>
