<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmtech.restaurantapp.MakeMarkerFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_marginTop="@dimen/marker_marg_top">

            <TextView
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marker_marg_left"
                android:text="@string/marker_title1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="50" />
            <EditText
                android:layout_column="2"
                android:text="@string/marker_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_weight="50" />
        </TableRow>
        <TableRow>
            <TextView android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marker_marg_left"
                android:text="@string/marker_rating1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="50"/>
            <EditText
                android:layout_column="2"
                android:text="@string/marker_rating2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:layout_weight="50" />
        </TableRow>
        <TableRow>
            <TextView android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marker_marg_left"
                android:text="@string/marker_comment1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="50"/>
            <EditText
                android:layout_column="2"
                android:text="@string/marker_comment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comment"
                android:layout_weight="50" />
        </TableRow>

            <Spinner
                android:layout_marginLeft="@dimen/menu_spinner_margin"
                android:layout_marginRight="@dimen/menu_spinner_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerMain"
                android:layout_centerVertical="true" />
        <TableRow>
        <TextView
            android:layout_column="2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/category"
            android:text="@string/marker_category"/>
        </TableRow>
    </TableLayout>
    <Button
        android:text="@string/marker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        />

</FrameLayout>
